thymeleaf pages edited